--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@neondatabase/serverless": "^0.10.3",
+    "@vercel/postgres": "^0.10.0",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.6",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
