--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@neondatabase/serverless": "^0.10.3",
-    "@vercel/postgres": "^0.10.0",
+    "@supabase/supabase-js": "^2.46.1",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.6",
     "next": "15.0.3",
